# Shridhar_MRT_induction_Elec

./: README.md
mrt_ws/Task1/install/: local_setup.sh  setup.sh
mrt_ws/Task1/log/: latest_build
mrt_ws/Task1/src/sauron/: setup.py
mrt_ws/Task1/src/sauron/launch/: sauron.launch.py
mrt_ws/Task1/src/sauron/sauron/: listener.py
mrt_ws/Task1/src/week0_tutorials/: package.xml  setup.py
mrt_ws/Task1/src/week0_tutorials/launch/: week0_tutorials.launch.py
mrt_ws/Task2/: allcommands.txt
mrt_ws/Task2/data/: readthis.txt
mrt_ws/Task2/install/: local_setup.sh  setup.sh
mrt_ws/Task2/install/arucosrvmsg/share/arucosrvmsg/: local_setup.sh  package.dsv  package.sh  package.xml  package.zsh
mrt_ws/Task2/install/arucosrvmsg/share/arucosrvmsg/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  arucosrvmsgConfig.cmake  arucosrvmsgS__rosidl_typesupport_cExport-noconfig.cmake  arucosrvmsgS__rosidl_typesupport_cExport.cmake  arucosrvmsgS__rosidl_typesupport_cppExport-noconfig.cmake  arucosrvmsgS__rosidl_typesupport_introspection_cppExport.cmake  arucosrvmsg__rosidl_typesupport_cExport-noconfig.cmake  arucosrvmsg__rosidl_typesupport_cppExport-noconfig.cmake  arucosrvmsg__rosidl_typesupport_introspection_cExport-noconfig.cmake  arucosrvmsg__rosidl_typesupport_introspection_cExport.cmake  export_arucosrvmsgS__rosidl_generator_cExport-noconfig.cmake  export_arucosrvmsgS__rosidl_generator_cppExport.cmake  export_arucosrvmsgS__rosidl_generator_pyExport.cmake  export_arucosrvmsgS__rosidl_typesupport_fastrtps_cExport.cmake  export_arucosrvmsgS__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_arucosrvmsgS__rosidl_typesupport_fastrtps_cppExport.cmake  export_arucosrvmsg__rosidl_generator_cExport.cmake  export_arucosrvmsg__rosidl_generator_pyExport-noconfig.cmake  export_arucosrvmsg__rosidl_generator_pyExport.cmake  export_arucosrvmsg__rosidl_typesupport_fastrtps_cExport.cmake  export_arucosrvmsg__rosidl_typesupport_fastrtps_cppExport.cmake
mrt_ws/Task2/install/arucosrvmsg/share/arucosrvmsg/srv/: ArucoMarkers.idl  ArucoMarkers.srv  ArucoMarkers_Response.msg
mrt_ws/Task2/log/: latest_build
mrt_ws/Task2/src/arucoserver/: package.xml  setup.cfg  setup.py
mrt_ws/Task2/src/arucoserver/arucoserver/: image_client.py  nonstopwebcam.py  service.py  servicetest.py  video_client.py  videoserver2.py
mrt_ws/Task2/src/arucoserver/launch/: nonstopwebcam.launch.py  samplevideo.launch.py  samplevideo1.launch.py  webcam.launch.py  (+2 more)
mrt_ws/Task2/src/arucosrvmsg/: CMakeLists.txt  package.xml
mrt_ws/Task2/src/py_srvcli/: package.xml  setup.py
mrt_ws/Task2/src/serveradd/: setup.cfg  setup.py
mrt_ws/Task2/src/tutorial_interfaces/: package.xml
mrt_ws/Task3/README/: README.txt
mrt_ws/Task3/install/: local_setup.sh  setup.sh
mrt_ws/Task3/log/: latest_build
mrt_ws/Task3/src/arucoserver/: setup.py
mrt_ws/Task3/src/bobthebot/: CMakeLists.txt
mrt_ws/Task4/install/: local_setup.sh  setup.sh
mrt_ws/Task4/log/: latest_build
mrt_ws/Task4/src/assgn/: package.xml  setup.py
(+163 files in other folders)
