<?xml version="1.0"?>
<package format="3">
  <name>arucosrvmsg</name>
  <version>0.0.0</version>
  <description>A package to detect Aruco markers using a custom ROS2 service.</description>
  <maintainer email="Shridhar.g.patil1@gmail.com">shridhar</maintainer>
  <license>MRT</license> 

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend> 
  <depend>opencv4</depend>  


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

